--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,4 +12,4 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - run: npx prettier --check public/index.html
+      - run: npx prettier --check --write public/
